--- a/FamilyMapClientRedo/app/src/main/res/values/strings.xml
+++ b/FamilyMapClientRedo/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">FamilyMapClientRedo</string>
+    <string name="app_name">Family Map</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="signIn">Sign In</string>
+    <string name="register">Register</string>
 
 </resources>
